@@ -2,7 +2,8 @@
 Revision 4.4.7, released 2018-09-XX
 -----------------------------------
 
-No changes so far
+- Fixed hlapi/v3arch transport target caching to ensure transport targets
+  are different even if just timeout/retries options differ
 
 Revision 4.4.6, released 2018-09-13
 -----------------------------------
